add captcha wait

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,4 +3,6 @@ browser=chrome
 language=ru
 path=src/main/resources
 timeout=10
+timeoutForWaitingMail=20
+timeoutForCaptcha=120
 host=IMAP.gmail.com
